--- a/index.html
+++ b/index.html
@@ -8,6 +8,79 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <!-- Header  -->
+    <header>
+        <!-- navigation -->
+         <div class="nav">
+            <div>
+                <h1 class="nav-title">
+                    G3 Architects
+                </h1>
+            </div>
+            <div class="nav-list">
+
+            </div>
+        </div>
+        <!-- Header Text  -->
+        <div class="header-text">
+            <h1>
+                Brand New <br>
+                Group of Architects 
+            </h1>
+            <p>
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br>
+                 some form, by injected humour, or randomised words which don't look even
+            </p>
+            <button>Explore More</button>
+        </div>
+        <div class="header-banner">
+            <img src="images/banner.png" alt="">
+        </div>
+    </header>
+    <!-- Feature  -->
+    <section class="feature">
+        <!-- Feature content  -->
+        <div class="featur-content">
+            <h1>
+                Features you will love & enjoy
+            </h1>
+            <p>
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+            </p>
+            <div>
+                <h3>
+                    Dexktop & Mobile Version
+                </h3>
+                <p>
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                </p>
+            </div>
+            <div>
+                <h3>
+                    Drag & Drop Builder
+                </h3>
+                <p>
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                </p>
+            </div>
+            <div>
+                <h3>
+                    Awesome Modern Design
+                </h3>
+                <p>
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                </p>
+            </div>
+            <div>
+                <h3>
+                    Super Easy to Edit
+                </h3>
+                <p>
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                </p>
+            </div>
+        </div>
+        <div class="feature-img"></div>
+    </section>
 </body>
 </html>
